sandbox/output
Hiker.java:11: error: ')' expected
                if(ints[i] != null && "".equals(ints[i].trim()) {
                                                               ^
1 error
